--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,9 @@ static-z3 = ["z3/static-link-z3"]
 pyo3 = { version = "0.18.0", features = ["abi3-py37", "extension-module"] }
 biodivine-lib-param-bn = { version="0.4.3", features=["solver-z3"] }
 biodivine-lib-bdd = "0.4.2"
-biodivine-pbn-control = { git="https://github.com/sybila/biodivine-pbn-control", rev="1847a6290cadf964fecc9e75d6821907cc715109" }
+biodivine-pbn-control = "0.2.1"
+rand = "0.8.5"
+macros = { path = "macros" }
 
 # Include Z3 dependencies as strictly as possible, we don't want
 # this to change because it might break our release builds.
