--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,9 @@ crate-type = ["cdylib", "rlib"]
 static-z3 = ["z3/static-link-z3"]
 
 [dependencies]
-pyo3 = { version = "0.18.0", features = ["abi3-py37", "extension-module"] }
+num-bigint = "0.4.3"
+num-traits = "0.2.15"
+pyo3 = { version = "0.18.1", features = ["extension-module", "num-bigint"] }
 biodivine-lib-param-bn = { version="0.4.3", features=["solver-z3"] }
 biodivine-lib-bdd = "0.4.2"
 biodivine-pbn-control = "0.2.1"
