--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "biodivine-aeon-py"
-version = "0.2.0-alpha5"
+version = "0.2.0"
 edition = "2021"
 
 [lib]
@@ -16,9 +16,9 @@ crate-type = ["cdylib", "rlib"]
 static-z3 = ["z3/static-link-z3"]
 
 [dependencies]
-pyo3 = { version = "0.18.0", features = ["abi3-py37", "extension-module"] }
+pyo3 = { version = "0.19.0", features = ["abi3-py37", "extension-module"] }
 biodivine-lib-param-bn = { version="0.4.3", features=["solver-z3"] }
-biodivine-lib-bdd = "0.4.2"
+biodivine-lib-bdd = "0.5.1"
 biodivine-pbn-control = "0.2.1"
 rand = "0.8.5"
 macros = { path = "macros" }
@@ -29,4 +29,4 @@ z3="^0.11.2"
 z3-sys = "^0.7.1"
 
 [build-dependencies]
-pyo3-build-config = "0.18.0"
+pyo3-build-config = "0.19.0"
