--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [build-system]
-requires = ["maturin>=0.14,<0.15"]
+requires = ["maturin>=1.0.1,<1.1.0"]
 build-backend = "maturin"
 
 [project]
 name = "biodivine_aeon"
 repository = "https://github.com/sybila/biodivine-aeon-py/"
-documentation = "https://biodivine.fi.muni.cz/docs/aeon-py/v0.1.0/"
+documentation = "https://biodivine.fi.muni.cz/docs/aeon-py/v0.2.0/"
 description = "Python bindings for the tool AEON."
-version = "0.2.0a5"
+version = "0.2.0"
 requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Rust",
