--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -118,13 +118,14 @@ jobs:
       matrix:
         # For now, windows builds are broken...
         os: [macos-latest, ubuntu-latest]
+        python: ["3.9", "3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v2
       - name: Conda environment creation and activation
         uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: ${{ env.PYTHON_VERSION }}
+          python-version: ${{ matrix.python }}
           environment-file: conda_env.yaml
           auto-update-conda: false
           auto-activate-base: false
@@ -132,7 +133,7 @@ jobs:
       - name: Build and upload the conda packages
         uses: uibcdf/action-build-and-upload-conda-packages@v1.1-beta.1
         with:
-          python-version: ${{ env.PYTHON_VERSION }}
+          python-version: ${{ matrix.python }}
           meta_yaml_dir: "conda"
           user: daemontus
           label: main
