--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,9 @@ build-backend = "maturin"
 [project]
 name = "biodivine_aeon"
 repository = "https://github.com/sybila/biodivine-aeon-py/"
-documentation = "https://biodivine.fi.muni.cz/docs/aeon-py/v0.2.0/"
+documentation = "https://biodivine.fi.muni.cz/docs/aeon-py/v0.4.0a1/"
 description = "Python bindings for the tool AEON."
-version = "0.3.0a0"
+version = "0.4.0a1"
 requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Rust",
