--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "biodivine_aeon" %}
-{% set version = "0.2.0" %}
+{% set version = "0.4.0a2" %}
 
 package:
   name: "{{ name|lower }}"
