--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "biodivine-aeon-py"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 
 [lib]
@@ -20,9 +20,10 @@ pyo3 = { version = "0.19.0", features = ["abi3-py37", "extension-module"] }
 biodivine-lib-param-bn = { version="0.4.5", features=["solver-z3"] }
 biodivine-lib-bdd = "0.5.1"
 biodivine-pbn-control = "0.2.1"
-biodivine-hctl-model-checker = "0.1.7"
+biodivine-hctl-model-checker = "0.2.0"
 rand = "0.8.5"
 macros = { path = "macros" }
+zip = "0.6.3"
 
 # Include Z3 dependencies as strictly as possible, we don't want
 # this to change because it might break our release builds.
