--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ name = "biodivine_aeon"
 crate-type = ["cdylib", "rlib"]
 
 [features]
-#default = ['static-z3']
+default = ['static-z3']
 # For releases, we want to include Z3 statically, so that users
 # don't have to install it (or break compatibility with new versions).
 # So for CI builds, this feature is enabled, but for local builds,
@@ -17,7 +17,7 @@ crate-type = ["cdylib", "rlib"]
 static-z3 = ["z3/static-link-z3"]
 
 [dependencies]
-pyo3 = { version = "0.20.0", features = ["abi3-py37", "extension-module"] }
+pyo3 = { version = "0.20.0", features = ["abi3-py37", "extension-module", "num-bigint"] }
 biodivine-lib-param-bn = { version="0.5.2", features=["solver-z3"] }
 biodivine-lib-bdd = "0.5.8"
 biodivine-pbn-control = "0.3.1"
@@ -25,6 +25,8 @@ biodivine-hctl-model-checker = "0.2.2"
 rand = "0.8.5"
 macros = { path = "macros" }
 zip = "0.6.6"
+num-bigint = "0.4.4"
+num-traits = "0.2.17"
 
 # Include Z3 dependencies as strictly as possible, we don't want
 # this to change because it might break our release builds.
