--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,14 @@
+# This workflow only runs for tags. It takes a lot of time to complete because
+# it has to bundle Z3 statically into the final binary.
+# Specifically, we:
+#  - Build the library using static Z3 on linux/windows/macOS and upload the result to GitHub storage.
+#  - Create a release package from the uploaded wheel files and push it to PyPI.
+#  - Do the same thing for conda, but also for different versions of Python.
 name: build
 on:
   push:
-  pull_request:
+    tags:
+      - '*'
 env:
   # A fixed version used for testing, so that the builds don't
   # spontaneously break after a few years.
@@ -13,129 +20,10 @@ env:
   Z3_VERSION: "4.8.12"
   MACOS_TARGET: "11.0"
   PYTHON_VERSION: "3.12"
+
 jobs:
-  # Checks syntax formatting (does not need z3).
-  fmt:
-    name: Rustfmt
-    runs-on: ubuntu-latest
-    env:
-      RUSTFLAGS: "-D warnings"
-    steps:
-      - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          toolchain: ${{ env.RUST_VERSION }}
-          components: rustfmt
-      - run: cargo fmt --all -- --check
-
-  # Run basic code validity check.
-  check:
-    needs: fmt
-    name: Check
-    runs-on: ubuntu-latest
-    env:
-      RUSTFLAGS: "-D warnings"
-    steps:
-      - uses: actions/checkout@v3
-      - name: Setup Z3.
-        id: z3
-        uses: cda-tum/setup-z3@v1
-        with:
-          version: ${{ env.Z3_VERSION }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # Explicitly add z3 to the include paths, because that's not what the installer is trained to do.
-      - run: echo "CPATH=$CPATH:$Z3_ROOT/include" >> $GITHUB_ENV
-      - run: echo "LIBRARY_PATH=$LIBRARY_PATH:$Z3_ROOT/bin" >> $GITHUB_ENV
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          toolchain: ${{ env.RUST_VERSION }}
-      # Should use shared z3 for faster runtime.
-      - run: cargo check
-
-  # Checks code style.
-  clippy:
-    needs: check
-    name: Clippy
-    runs-on: ubuntu-latest
-    env:
-      RUSTFLAGS: "-D warnings"
-    steps:
-      - uses: actions/checkout@v3
-      - name: Setup Z3.
-        id: z3
-        uses: cda-tum/setup-z3@v1
-        with:
-          version: ${{ env.Z3_VERSION }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # Explicitly add z3 to the include paths, because that's not what the installer is trained to do.
-      - run: echo "CPATH=$CPATH:$Z3_ROOT/include" >> $GITHUB_ENV
-      - run: echo "LIBRARY_PATH=$LIBRARY_PATH:$Z3_ROOT/bin" >> $GITHUB_ENV
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          toolchain: ${{ env.RUST_VERSION }}
-          components: clippy
-      # Should use shared z3 for faster runtime.
-      - run: cargo clippy
-
-  tests-and-coverage:
-    needs: check
-    # For reasons unbeknownst to mankind, llvm-cov segfaults on ubuntu runners
-    # when combined with pytest. The solution for now is to use macOS.
-    runs-on: macos-12
-    env:
-      # These are the env variables set by llvm-cov, but modified such that they actually work in GH actions.
-      RUSTFLAGS: '-D warnings -C instrument-coverage --cfg=coverage --cfg=trybuild_no_target'
-      LLVM_PROFILE_FILE: './target/biodivine-aeon-py-%p-%4m.profraw'
-      CARGO_LLVM_COV: 1
-      CARGO_LLVM_COV_SHOW_ENV: 1
-      CARGO_LLVM_COV_TARGET_DIR: './target'
-    steps:
-      # Here, we don't need to bother with the `manylinux` container,
-      # since we are only testing, not building multiplatform `wheel` files.
-      - name: Checkout.
-        uses: actions/checkout@v4
-      - name: Setup Z3.
-        id: z3
-        uses: cda-tum/setup-z3@v1
-        with:
-          version: ${{ env.Z3_VERSION }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # Explicitly add z3 to the include paths, because that's not what the installer is trained to do.
-      - run: echo "CPATH=$CPATH:$Z3_ROOT/include" >> $GITHUB_ENV
-      - run: echo "LIBRARY_PATH=$LIBRARY_PATH:$Z3_ROOT/bin" >> $GITHUB_ENV
-      - run: echo "DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:$Z3_ROOT/bin" >> $GITHUB_ENV
-      - name: Setup Python.
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-          architecture: x64
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          toolchain: ${{ env.RUST_VERSION }}
-      - name: Setup Rust/Python environment.
-        run: |
-          rustup component add llvm-tools-preview
-          cargo install cargo-llvm-cov
-          python3 -m venv venv
-          ./venv/bin/pip3 install -r dev-requirements.txt
-      - run: |
-          source ./venv/bin/activate
-          cargo llvm-cov clean --workspace
-          cargo test
-          maturin develop
-          pytest ./tests --cov=biodivine_aeon --cov-report xml
-          cargo llvm-cov report --lcov --output-path coverage.lcov
-      - uses: codecov/codecov-action@v3
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-          files: coverage.lcov,coverage.xml
-
   build-linux:
     runs-on: ubuntu-latest
-    needs: [ tests-and-coverage ]
     steps:
       - name: Checkout.
         uses: actions/checkout@v4
@@ -155,7 +43,6 @@ jobs:
 
   build-macos:
     runs-on: macos-latest
-    needs: [ tests-and-coverage ]
     steps:
       - name: Checkout.
         uses: actions/checkout@v4
@@ -171,8 +58,9 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
           architecture: x64
-      - name: Setup Rust toolchain.
-        run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain ${{ env.RUST_VERSION }}
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: ${{ env.RUST_VERSION }}
       # Explicitly add z3 to include path (probably some bug in either 
       # `setup-z3` or `z3-sys` crate, because this should not be necessary).
       - run: echo "CPATH=$Z3_ROOT/include" >> $GITHUB_ENV      
@@ -192,7 +80,6 @@ jobs:
 
   build-windows:
     runs-on: windows-latest
-    needs: [ tests-and-coverage ]
     steps:
       - name: Checkout.
         uses: actions/checkout@v4
@@ -201,8 +88,9 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
           architecture: x64
-      - name: Setup Rust toolchain.
-        run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain ${{ env.RUST_VERSION }}            
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: ${{ env.RUST_VERSION }}
       # Surprisingly, windows is the easiest. Just build the thing.
       - name: Maturin build.
         uses: PyO3/maturin-action@v1
@@ -218,7 +106,6 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    if: "startsWith(github.ref, 'refs/tags/')"
     needs: [ build-macos, build-windows, build-linux ]
     steps:
       - uses: actions/download-artifact@v3
@@ -234,14 +121,12 @@ jobs:
 
   conda_deployment_with_new_tag:
     name: Conda deployment (${{ matrix.os }})
-    if: "startsWith(github.ref, 'refs/tags/')"
-    needs: [ tests-and-coverage ]
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         # For now, windows builds are broken...
         os: [macos-latest, ubuntu-latest]
-        python: ["3.9", "3.10", "3.11"]
+        python: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
       - uses: actions/checkout@v4
