--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,14 +53,12 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup Z3.
         id: z3
-        uses: cda-tum/setup-z3@v1
+        uses: daemontus/setup-z3@v1.3.0
         with:
           version: ${{ env.Z3_VERSION }}
+          add-to-library-path: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # Explicitly add z3 to the include paths, because that's not what the installer is trained to do.
-      - run: echo "CPATH=$CPATH:$Z3_ROOT/include" >> $GITHUB_ENV
-      - run: echo "LIBRARY_PATH=$LIBRARY_PATH:$Z3_ROOT/bin" >> $GITHUB_ENV
       - uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: ${{ env.RUST_VERSION }}
