--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,10 +53,10 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup Z3.
         id: z3
-        uses: daemontus/setup-z3@v1.3.0
+        uses: daemontus/setup-z3@v1.3.1
         with:
           version: ${{ env.Z3_VERSION }}
-          add-to-library-path: true
+          add_to_library_path: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: dtolnay/rust-toolchain@stable
@@ -75,10 +75,10 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup Z3.
         id: z3
-        uses: daemontus/setup-z3@v1.3.0
+        uses: daemontus/setup-z3@v1.3.1
         with:
           version: ${{ env.Z3_VERSION }}
-          add-to-library-path: true
+          add_to_library_path: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: dtolnay/rust-toolchain@stable
@@ -97,10 +97,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Z3.
         id: z3
-        uses: daemontus/setup-z3@v1.3.0
+        uses: daemontus/setup-z3@v1.3.1
         with:
           version: ${{ env.Z3_VERSION }}
-          add-to-library-path: true
+          add_to_library_path: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup Python.
@@ -128,10 +128,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Z3.
         id: z3
-        uses: daemontus/setup-z3@v1.3.0
+        uses: daemontus/setup-z3@v1.3.1
         with:
           version: ${{ env.Z3_VERSION }}
-          add-to-library-path: true
+          add_to_library_path: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup Python.
@@ -159,10 +159,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Z3.
         id: z3
-        uses: daemontus/setup-z3@v1.3.0
+        uses: daemontus/setup-z3@v1.3.1
         with:
           version: ${{ env.Z3_VERSION }}
-          add-to-library-path: true
+          add_to_library_path: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup Python.
@@ -201,10 +201,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Z3.
         id: z3
-        uses: daemontus/setup-z3@v1.3.0
+        uses: daemontus/setup-z3@v1.3.1
         with:
           version: ${{ env.Z3_VERSION }}
-          add-to-library-path: true
+          add_to_library_path: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup Python.
