--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "biodivine-aeon-py"
-version = "0.0.9-alpha2"
+version = "0.0.9-alpha3"
 edition = "2021"
 
 [lib]
@@ -24,6 +24,7 @@ biodivine-hctl-model-checker = "0.2.2"
 rand = "0.8.5"
 macros = { path = "macros" }
 zip = "0.6.6"
+itertools = "0.11.0"
 
 # Include Z3 dependencies as strictly as possible, we don't want
 # this to change because it might break our release builds.
