--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ static-z3 = ["z3/static-link-z3"]
 
 [dependencies]
 pyo3 = { version = "0.20.0", features = ["abi3-py37", "extension-module", "num-bigint"] }
-biodivine-lib-param-bn = { version="0.5.3", features=["solver-z3"] }
+biodivine-lib-param-bn = { version="0.5.4", features=["solver-z3"] }
 biodivine-lib-bdd = "0.5.9"
 biodivine-pbn-control = "0.3.1"
 biodivine-hctl-model-checker = "0.2.2"
@@ -27,6 +27,7 @@ macros = { path = "macros" }
 zip = "0.6.6"
 num-bigint = "0.4.4"
 num-traits = "0.2.17"
+either = "1.9.0"
 
 # Include Z3 dependencies as strictly as possible, we don't want
 # this to change because it might break our release builds.
