--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "biodivine_aeon"
 repository = "https://github.com/sybila/biodivine-aeon-py/"
 documentation = "https://biodivine.fi.muni.cz/docs/aeon-py/v0.2.0/"
 description = "Python bindings for the tool AEON."
-version = "0.3.0"
+version = "1.0.0a1"
 requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Rust",
